added a little basic error handling to the import resource and cleaned up the swagger/openapi doc a little
