# swagger-doc.yml
@@ -14,6 +14,8 @@ paths:
   /:
     get:
       summary: Returns a list of the REST resources available on the server.
+      tags:
+        - Other
       responses:
         '200':
           description: A JSON array containing the resource name and its URL.
@@ -37,6 +39,8 @@ paths:
   /crime-reports/:
     get:
       summary: Returns a list of up to the first 500 CrimeReports.
+      tags:
+        - CrimeReport
       parameters:
         - name: locationId
           in: query
@@ -65,6 +69,8 @@ paths:
   /crime-reports/{id}:
     get:
       summary: Returns the CrimeReport with the specified id.
+      tags:
+        - CrimeReport
       parameters:
         - name: id
           in: path
@@ -80,10 +86,16 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/CrimeReport"
+        '400':
+          description: The request was malformed.
+        '404':
+          description: The specified CrimeReport cannot be found.
 
   /crime-locations/:
     get:
       summary: Returns a list of up to the first 500 CrimeLocations.
+      tags:
+        - CrimeLocation
       responses:
         '200':
           description: A JSON array containing CrimeLocations.
@@ -97,6 +109,8 @@ paths:
   /crime-locations/{id}:
     get:
       summary: Returns the CrimeLocation with the specified id.
+      tags:
+        - CrimeLocation
       parameters:
         - name: id
           in: path
@@ -112,10 +126,16 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/CrimeLocation"
+        '400':
+          description: The request was malformed.
+        '404':
+          description: The specified CrimeLocation cannot be found.
   
   /crime-locations/{id}/crime-reports:
     get:
       summary: Returns the first 500 CrimeReports related to the specified CrimeLocation.  This is the equivalent of /crime-reports?locationId={id}
+      tags:
+        - CrimeLocation
       parameters:
         - name: id
           in: path
@@ -137,6 +157,8 @@ paths:
   /offences/:
     get:
       summary: Returns a list of up to the first 500 offences.
+      tags:
+        - Offence
       responses:
         '200':
           description: A JSON array containing Offences.
@@ -150,6 +172,8 @@ paths:
   /offences/{id}:
     get:
       summary: Returns the offence with the specified id.
+      tags:
+        - Offence
       parameters:
         - name: id
           in: path
@@ -165,10 +189,16 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Offence"
+        '400':
+          description: The request was malformed.
+        '404':
+          description: The specified Offence cannot be found.
   
   /offences/{id}/crime-reports:
     get:
       summary: Returns the first 500 CrimeReports related to the specified Offence.  This is the equivalent of /crime-reports?offenceId={id}
+      tags:
+        - Offence
       parameters:
         - name: id
           in: path
@@ -186,25 +216,35 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/CrimeReport"
-  /import:
+                  
+  /import/:
     post:
       summary: Starts an import with the specified file.
+      tags:
+        - Other
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                filename:
-                  type: string
-                  description: The path to the file to import (this folder should be accessible by the server).
-                  required: true
-                  example: ../data/testFile.csv
+              $ref: "#/components/schemas/ImportContent"
+      responses:
+        '201':
+          description: The import process has successfully been created.
+        '400':
+          description: The request was malformed.
 
 
 components:
   schemas:
+    ImportContent:
+      type: object
+      properties:
+        filename:
+          type: string
+          description: The path to the file to import (this folder should be accessible by the server).
+          example: ../data/testFile.csv
+  
     CrimeLocation:
       description: The location at which a crime occurred.
       type: object
